# FNF-vulkan-engine

./: CMakeLists.txt  README.md
assets/shaders/animated/: animated.frag  animated.vert  animated.vert.spv
assets/shaders/hdrBloom/: downsample.frag  downsample.frag.spv  downsample.vert  upsample.frag  upsample.frag.spv  upsample.vert.spv
assets/shaders/quad/: quad.vert  quad.vert.spv
assets/shaders/waveTitle/: waveTitle.frag  waveTitle.frag.spv  waveTitle.vert  waveTitle.vert.spv
assets/sounds/: confirmMenu.flac
include/: config.h  holder.h  render.h  sprite.h  util.h
include/atlas/: xmlatlas.h
include/funkin/: conductor.h
include/funkin/states/: state.h  titlestate.h
include/funkin/timing/: conductor.h
include/ma/: audio.h
include/states/: state.h  titlestate.h
include/vk/: buffer.h  commandBuffer.h  commandPool.h  descriptor.h  device.h  framebuffer.h  image.h  imageView.h  physicalDevice.h  pipeline.h  renderPass.h  sampler.h  shader.h  surface.h  swapchain.h  sync.h  vertex.h  vkFunctions.h  vkutil.h
scripts/: generateVkFunctions.py  generateVkFunctions.sh
src/: config.h  holder.c  holder.h  main.c  render.c  render.h  sprite.c  sprite.h  util.c  util.h
src/atlas/: xmlatlas.c  xmlatlas.h
src/funkin/: conductor.c
src/funkin/states/: titlestate.c
src/funkin/timing/: conductor.c
src/ma/: audio.c
src/states/: titlestate.c
src/vk/: buffer.c  commandBuffer.c  commandBuffer.h  commandPool.c  commandPool.h  descriptor.c  device.c  device.h  framebuffer.c  image.c  imageView.c  instance.c  instance.h  physicalDevice.c  physicalDevice.h  pipeline.c  pipeline.h  renderPass.c  sampler.c  sampler.h  shader.c  shader.h  surface.c  swapchain.c  swapchain.h  sync.c  vkFunctions.c  vkutil.c  vkutil.h
